infra/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenant-api-ingress
  namespace: tenant-mgmt
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - api.myadomain.com
      secretName: tenant-api-cert
  rules:
    - host: api.myadomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-api
                port:
                  number: 8000
